// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FieldArray /> tests render initial value when given 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests render placeholder when no initial value given 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
      </div>
      <div
        class="noData"
      >
        <div
          class="text"
        >
          This is a no data/add data message.
        </div>
        <button
          class="bp3-button button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color withLeftIcon"
          data-id="btn-add-no-data"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to add rows from both buttons 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Item 1
            </td>
            <td>
              Item 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to add rows from both buttons 2`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              Item 1
            </td>
            <td>
              Item 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              Item 1
            </td>
            <td>
              Item 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to delete row 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;

exports[`<FieldArray /> tests should be able to render custom fields 1`] = `
<div>
  <form>
    <div
      class="container"
    >
      <div
        class="horizontal layout-spacing-undefined StyledProps--main title"
      >
        <span
          class="text"
        >
          Field List
        </span>
        <button
          class="bp3-button bp3-minimal button StyledProps--font StyledProps--main StyledProps--intent-primary with-current-color without-shadow withLeftIcon"
          data-id="btn-add"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
            icon="plus"
          >
            <svg
              data-icon="plus"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                plus
              </desc>
              <path
                d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <span
            class="bp3-button-text"
          >
            Add
          </span>
        </button>
      </div>
      <table
        cellspacing="0"
      >
        <thead>
          <tr>
            <th>
              Column Header 1
            </th>
            <th>
              Column Header 2
            </th>
            <th>
              Column Header 3
            </th>
            <th />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td>
              <div
                id="#customField"
              />
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
          <tr>
            <td>
              col 1
            </td>
            <td>
              col 2
            </td>
            <td>
              <div
                id="#customField"
              />
            </td>
            <td
              class="deleteColumn"
            >
              <button
                class="bp3-button bp3-minimal button StyledProps--font StyledProps--main with-current-color iconOnly without-shadow withLeftIcon"
                data-id="btn-delete"
                type="button"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="main-trash"
                >
                  <svg
                    height="16"
                    width="16"
                  />
                </span>
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </form>
</div>
`;
